# final2024

./: CMakeLists.txt  OrderManager.cpp  OrderManager.h  README.md  chef.cpp  chef.h  main.cpp  menu.cpp  menu.h  order.cpp  order.h  output.txt  receipt.cpp  receipt.h  role.cpp  role.h
